--- a/books.bib
+++ b/books.bib
@@ -1,9 +1,16 @@
 @Book{feucht2010designing,
     author = {Feucht, Dennis},
-    title = {Designing amplifier circuits},
+    title = {Designing Amplifier Circuits},
     publisher = {SciTech Pub},
     year = {2010},
     address = {Raleigh, NC},
     isbn = {1891121863}
 }
-
+@Book{artOfElectronics,
+    author = {Horowitz, Paul},
+    title = {The Art of Electronics},
+    publisher = {Cambridge University Press},
+    year = {2015},
+    address = {New York, NY, USA},
+    isbn = {0521809266}
+}
