--- a/books.bib
+++ b/books.bib
@@ -14,3 +14,19 @@
     address = {New York, NY, USA},
     isbn = {0521809266}
 }
+@Book{williams1998the,
+    author = {Williams, Jim},
+    title = {The art and science of analog circuit design},
+    publisher = {Butterworth-Heinemann},
+    year = {1998},
+    address = {Boston},
+    isbn = {0750670622}
+}
+@Book{williams1991analog,
+    author = {Williams, Jim},
+    title = {Analog circuit design : art, science, and personalities},
+    publisher = {Butterworth-Heinemann},
+    year = {1991},
+    address = {Boston},
+    isbn = {0750696400}
+}
